--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/app.ts",
     "build": "tsc",
-    "start": "node dist/app.js"
+    "start": "cross-env NODE_ENV=production node dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +14,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "nanoid": "^3.1.23",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
@@ -30,5 +32,8 @@
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
